--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.18.1
   dartz: ^0.10.1
   lottie: ^2.5.0
+  expandable_page_view: ^1.0.17
 
 dev_dependencies:
   flutter_test:
